--- a/wheel.html
+++ b/wheel.html
@@ -157,7 +157,7 @@
   }
 
   function showResult() {
-    const correctedAngle = (2 * Math.PI - (currentAngle % (2 * Math.PI)) - Math.PI / 2 + 2 * Math.PI) % (2 * Math.PI);
+    const correctedAngle = (2 * Math.PI - (currentAngle % (2 * Math.PI)) + Math.PI / 2) % (2 * Math.PI);
     const index = Math.floor(correctedAngle / anglePerSegment);
     const reward = rewards[index];
     pointer.style.animation = 'bounce 0.5s ease';
@@ -168,7 +168,7 @@
   spinButton.addEventListener('click', () => {
     if (!spinning) {
       spinning = true;
-      spinVelocity = Math.random() * 0.3 + 0.25;
+      spinVelocity = Math.random() * 0.15 + 0.1;
       spinButton.disabled = true;
     }
   });
@@ -176,12 +176,12 @@
   // Расположение стрелки по центру
   const canvasRect = canvas.getBoundingClientRect();
   pointer.style.left = `${canvasRect.left + canvas.width / 2 - 25}px`;
-  pointer.style.top = `${canvasRect.top - 10}px`;
+  pointer.style.top = `${canvasRect.top + 20}px`;
 
   window.addEventListener('resize', () => {
     const canvasRect = canvas.getBoundingClientRect();
     pointer.style.left = `${canvasRect.left + canvas.width / 2 - 25}px`;
-    pointer.style.top = `${canvasRect.top - 10}px`;
+    pointer.style.top = `${canvasRect.top + 20}px`;
   });
 
   drawWheel();
