--- a/wheel.html
+++ b/wheel.html
@@ -77,7 +77,7 @@
 
 <script>
   if (window.Telegram && window.Telegram.WebApp) {
-    const tg = window.Telegram.WebApp;
+    const tg = window.Telegram?.WebApp;
     tg.ready(); // Явно вызываем ready для инициализации
     tg.expand(); // Расширить окно
     console.log("Telegram WebApp initialized successfully, version:", tg.version);
