--- a/wheel.html
+++ b/wheel.html
@@ -13,6 +13,7 @@
       margin: 0;
       background: linear-gradient(135deg, #222, #333);
       font-family: Arial, sans-serif;
+      overflow: hidden;
     }
     canvas {
       border: 4px solid #fff;
