--- a/wheel.html
+++ b/wheel.html
@@ -200,8 +200,9 @@
 
     function positionPointer() {
       const containerRect = wheelContainer.getBoundingClientRect();
+      const pointerOffset = 10; // Отступ от нижнего края canvas
       pointer.style.left = `${containerRect.left + wheelContainer.offsetWidth / 2 - 25}px`;
-      pointer.style.top = `${containerRect.bottom - 40}px`;
+      pointer.style.top = `${containerRect.top + wheelContainer.offsetHeight - pointerOffset}px`;
     }
 
     window.addEventListener('resize', resizeCanvas);
