--- a/wheel.html
+++ b/wheel.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -12,7 +10,9 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+      width: 100vw;
       margin: 0;
+      padding: 0;
       background: linear-gradient(135deg, #222, #333);
       font-family: Arial, sans-serif;
       overflow: hidden;
@@ -23,6 +23,33 @@
       max-height: 80vh;
       aspect-ratio: 1 / 1;
       position: relative;
+      margin-bottom: 60px; /* увеличим отступ под стрелку */
+    }
+    
+    #pointer {
+      width: 0;
+      height: 0;
+      position: absolute;
+      bottom: -40px;
+      left: 50%;
+      transform: translateX(-50%);
+      border-left: 25px solid transparent;
+      border-right: 25px solid transparent;
+      border-top: 40px solid #000;
+      animation: none;
+    }
+    
+    #pointer::after {
+      content: '';
+      position: absolute;
+      left: -25px;
+      top: 0;
+      width: 0;
+      height: 0;
+      border-left: 25px solid transparent;
+      border-right: 25px solid transparent;
+      border-top: 40px solid #000;
+      filter: drop-shadow(0 0 4px white);
     }
     canvas {
       width: 100%;
@@ -50,28 +77,6 @@
     #spinButton:disabled {
       background: #666;
       cursor: not-allowed;
-    }
-    #pointer {
-      width: 0;
-      height: 0;
-      position: absolute;
-      top: 0;
-      border-left: 25px solid transparent;
-      border-right: 25px solid transparent;
-      border-bottom: 40px solid #000;
-      animation: none;
-    }
-    #pointer::after {
-      content: '';
-      position: absolute;
-      left: -25px;
-      top: 0;
-      width: 0;
-      height: 0;
-      border-left: 25px solid transparent;
-      border-right: 25px solid transparent;
-      border-bottom: 40px solid #000;
-      filter: drop-shadow(0 0 4px white);
     }
     @keyframes bounce {
       0% { transform: translateY(0); }
@@ -201,8 +206,8 @@
     function positionPointer() {
       const containerRect = wheelContainer.getBoundingClientRect();
       const pointerOffset = 10; // Отступ от нижнего края canvas
-      pointer.style.left = `${containerRect.left + wheelContainer.offsetWidth / 2 - 25}px`;
-      pointer.style.top = `${containerRect.top + canvas.height - pointerOffset}px`; // Позиция относительно canvas
+      pointer.style.left = `${containerRect.left + wheelContainer.offsetWidth / 2 - 25}px`; // Центр по горизонтали
+      pointer.style.top = `${containerRect.top + wheelContainer.offsetHeight + pointerOffset}px`; // Прямо под canvas
     }
 
     window.addEventListener('resize', resizeCanvas);
@@ -211,4 +216,3 @@
   </script>
 </body>
 </html>
-
