--- a/wheel.html
+++ b/wheel.html
@@ -23,7 +23,7 @@
       max-height: 80vh;
       aspect-ratio: 1 / 1;
       position: relative;
-      margin-bottom: 60px; /* увеличим отступ под стрелку */
+      margin-bottom: 70px; /* увеличим отступ под стрелку */
     }
     #pointer {
       width: 0;
@@ -80,10 +80,10 @@
       cursor: not-allowed;
     }
     @keyframes bounce {
-      0% { transform: translateY(0); }
-      30% { transform: translateY(-10px); }
-      60% { transform: translateY(5px); }
-      100% { transform: translateY(0); }
+      0%   { transform: translateX(-50%) translateY(0); }
+      30%  { transform: translateX(-50%) translateY(-10px); }
+      60%  { transform: translateX(-50%) translateY(5px); }
+      100% { transform: translateX(-50%) translateY(0); }
     }
   </style>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
