--- a/wheel.html
+++ b/wheel.html
@@ -150,11 +150,7 @@
       { type: 'exp_gain', value: 50, text: '50 опыта', color: '#1B5E20' },
       { type: 'item', value: 'Легендарный щит', text: 'Легендарный щит', color: '#0288D1' },
       { type: 'exp_gain', value: 5, text: '5 опыта', color: '#A5D6A7' },
-      { type: 'item', value: 'Таинственный свиток', text: 'Таинственный свиток', color: '#8E24AA' },
-      { type: 'exp_loss', value: 20, text: '-20 опыта', color: '#C62828' },
-      { type: 'exp_gain', value: 100, text: '100 опыта', color: '#00695C' },
-      { type: 'item', value: 'Кольцо силы', text: 'Кольцо силы', color: '#F57C00' },
-      { type: 'exp_loss', value: 25, text: '-25 опыта', color: '#B71C1C' }
+      { type: 'item', value: 'Таинственный свиток', text: 'Таинственный свиток', color: '#8E24AA' }
     ];
 
     const anglePerSegment = (2 * Math.PI) / rewards.length;
