--- a/wheel.html
+++ b/wheel.html
@@ -211,8 +211,10 @@
       pointer.style.animation = 'bounce 0.5s ease';
       setTimeout(() => pointer.style.animation = 'none', 500);
 
-      Telegram.WebApp.sendData(JSON.stringify({ reward: reward.text }));
-      setTimeout(() => Telegram.WebApp.close(), 10000);
+      setTimeout(() => {
+        Telegram.WebApp.sendData(JSON.stringify({ reward: reward.text }));
+      }, 2000);
+      setTimeout(() => Telegram.WebApp.close(), 3000);
     }
 
     spinButton.addEventListener('click', () => {
