--- a/wheel.html
+++ b/wheel.html
@@ -137,20 +137,20 @@
     const rewards = [
       { type: 'exp_gain', value: 15, text: '15 опыта', color: '#4CAF50' },
       { type: 'exp_gain', value: 20, text: '20 опыта', color: '#66BB6A' },
-      { type: 'item', value: 'Редкий артефакт', text: 'Редкий артефакт', color: '#FFD700' },
+      { type: 'exp_loss', value: '5', text: '0', color: '#FFD700' },
       { type: 'exp_loss', value: 5, text: '-5 опыта', color: '#F44336' },
       { type: 'exp_gain', value: 10, text: '10 опыта', color: '#81C784' },
-      { type: 'item', value: 'Эпический меч', text: 'Эпический меч', color: '#D81B60' },
+      { type: 'exp_loss', value: '5', text: '0', color: '#D81B60' },
       { type: 'exp_gain', value: 25, text: '25 опыта', color: '#388E3C' },
       { type: 'exp_loss', value: 10, text: '-10 опыта', color: '#D32F2F' },
-      { type: 'item', value: 'Магический амулет', text: 'Магический амулет', color: '#7B1FA2' },
+      { type: 'exp_gain', value: '5', text: '0', color: '#7B1FA2' },
       { type: 'exp_gain', value: 30, text: '30 опыта', color: '#2E7D32' },
-      { type: 'item', value: 'Золотой ключ', text: 'Золотой ключ', color: '#FBC02D' },
+      { type: 'item', value: 'legendary', text: '🎁', color: '#FFD700' },
       { type: 'exp_loss', value: 15, text: '-15 опыта', color: '#B71C1C' },
-      { type: 'exp_gain', value: 50, text: '50 опыта', color: '#1B5E20' },
-      { type: 'item', value: 'Легендарный щит', text: 'Легендарный щит', color: '#0288D1' },
+      { type: 'exp_gain', value: 24, text: '24 опыта', color: '#1B5E20' },
+      { type: 'item', value: 'epic', text: '🎁', color: '#8E24AA' },
       { type: 'exp_gain', value: 5, text: '5 опыта', color: '#A5D6A7' },
-      { type: 'item', value: 'Таинственный свиток', text: 'Таинственный свиток', color: '#8E24AA' }
+      { type: 'exp_loss', value: '5', text: '0', color: '#8E24AA' }
     ];
 
     const anglePerSegment = (2 * Math.PI) / rewards.length;
