--- a/wheel.html
+++ b/wheel.html
@@ -135,22 +135,22 @@
     const wheelContainer = document.getElementById('wheel-container');
 
     const rewards = [
-      { type: 'exp_gain', value: 15, text: '15 опыта', color: '#4CAF50' },
-      { type: 'exp_gain', value: 20, text: '20 опыта', color: '#66BB6A' },
-      { type: 'exp_loss', value: '5', text: '0', color: '#FFD700' },
-      { type: 'exp_loss', value: 5, text: '-5 опыта', color: '#F44336' },
-      { type: 'exp_gain', value: 10, text: '10 опыта', color: '#81C784' },
-      { type: 'exp_loss', value: '5', text: '0', color: '#D81B60' },
-      { type: 'exp_gain', value: 25, text: '25 опыта', color: '#388E3C' },
-      { type: 'exp_loss', value: 10, text: '-10 опыта', color: '#D32F2F' },
-      { type: 'exp_gain', value: '5', text: '0', color: '#7B1FA2' },
-      { type: 'exp_gain', value: 30, text: '30 опыта', color: '#2E7D32' },
-      { type: 'item', value: 'legendary', text: '🎁', color: '#FFD700' },
-      { type: 'exp_loss', value: 15, text: '-15 опыта', color: '#B71C1C' },
-      { type: 'exp_gain', value: 24, text: '24 опыта', color: '#1B5E20' },
-      { type: 'item', value: 'epic', text: '🎁', color: '#8E24AA' },
-      { type: 'exp_gain', value: 5, text: '5 опыта', color: '#A5D6A7' },
-      { type: 'exp_loss', value: '5', text: '0', color: '#8E24AA' }
+      { type: 'exp_gain', value: 12, text: '12 опыта', color: '#388E3C' },      // зелёный, рост опыта
+      { type: 'exp_loss', value: 12, text: '-12 опыта', color: '#C62828' },     // тёмно-красный, потеря опыта
+      { type: 'exp_loss', value: '6', text: '-6 опыта', color: '#E57373' },     // светло-красный
+      { type: 'item', value: 'legendary', text: '🎁', color: '#FFD700' },       // золотой - оставил
+      { type: 'exp_loss', value: 12, text: '-12 опыта', color: '#B71C1C' },     // насыщенный красный
+      { type: 'premium', value: 7, text: 'премиум на 7 дней', color: '#6A1B9A' },// пурпурный — премиум стиль
+      { type: 'exp_gain', value: 24, text: '24 опыта', color: '#43A047' },      // более яркий зелёный
+      { type: 'exp_loss', value: '3', text: '-3 опыта', color: '#EF9A9A' },     // очень светло-красный
+      { type: 'raid', value: raid, text: 'Сброс таймера /raid', color: '#1565C0' }, // насыщенный синий — действие
+      { type: 'exp_gain', value: '24', text: '24 опыта', color: '#2E7D32' },    // насыщенный тёмно-зеленый
+      { type: 'exp_gain', value: 24, text: '24 опыта', color: '#66BB6A' },      // светло-зеленый
+      { type: 'exp_loss', value: 12, text: '-12 опыта', color: '#D32F2F' },     // ярко-красный
+      { type: 'item', value: 'epic', text: '🎁', color: '#8E24AA' },            // фиолетовый - оставил
+      { type: 'exp_gain', value: 24, text: '24 опыта', color: '#388E3C' },      // зелёный (повтор, можно заменить)
+      { type: 'exp_gain', value: 6, text: '6 опыта', color: '#81C784' },        // светло-зеленый
+      { type: 'exp_loss', value: '6', text: '-6 опыта', color: '#AD1457' }      // тёмно-розовый
     ];
 
     const anglePerSegment = (2 * Math.PI) / rewards.length;
@@ -229,7 +229,7 @@
       setTimeout(() => pointer.style.animation = 'none', 500);
 
       setTimeout(() => {
-        Telegram.WebApp.sendData(JSON.stringify({ reward: reward.text }));
+        Telegram.WebApp.sendData(JSON.stringify({ type: reward.type, value: reward.value }));
       }, 500);
       
       setTimeout(() => {
