--- a/wheel.html
+++ b/wheel.html
@@ -143,7 +143,7 @@
       { type: 'premium', value: 7, text: 'премиум на 7 дней', color: '#6A1B9A' },// пурпурный — премиум стиль
       { type: 'exp_gain', value: 24, text: '24 опыта', color: '#43A047' },      // более яркий зелёный
       { type: 'exp_loss', value: '3', text: '-3 опыта', color: '#EF9A9A' },     // очень светло-красный
-      { type: 'raid', value: raid, text: 'Сброс таймера /raid', color: '#1565C0' }, // насыщенный синий — действие
+      { type: 'raid', value: 'clear', text: 'Сброс таймера /raid', color: '#1565C0' }, // насыщенный синий — действие
       { type: 'exp_gain', value: '24', text: '24 опыта', color: '#2E7D32' },    // насыщенный тёмно-зеленый
       { type: 'exp_gain', value: 24, text: '24 опыта', color: '#66BB6A' },      // светло-зеленый
       { type: 'exp_loss', value: 12, text: '-12 опыта', color: '#D32F2F' },     // ярко-красный
